<resources>
    <string name="app_name">Food_App</string>
    <!-- TODO: Remove or change this placeholder text -->

    //Activity Login
    <string name="activity_login_tvSignIn">Sign In</string>
    <string name="activity_login_tvWelcome">Welcome to Fud Service</string>
    <string name="activity_login_tvSubWelcome">Enter your Phone number or Email address for sign in. Enjoy your food :)</string>
    <string name="activity_login_tvEmail">EMAIL ADDRESS</string>
    <string name="activity_login_tvPass">PASSWORD</string>
    <string name="activity_login_btnLogin">LOGIN</string>
    <string name="activity_login_tvQuestion">Don\'t have Account ?</string>
    <string name="activity_login_tvCreate">Create new Account</string>

    //Activity Register
    <string name="activity_register_tvRegister">Register</string>
    <string name="activity_register_tvWelcome">Create Account</string>
    <string name="activity_register_tvSubWelcome">Enter your Name, Email and Password for sign up.</string>
    <string name="activity_register_tvEmail">EMAIL ADDRESS</string>
    <string name="activity_register_tvPass">PASSWORD</string>
    <string name="activity_register_tvPassConfirm">CONFIRM YOUR PASSWORD</string>
    <string name="activity_register_btnReg">SIGN UP</string>
    <string name="activity_register_tvCondition">By Signing up you agree to our Terms Conditions and Privacy Policy.</string>

    //Splash Screen
    <string name="splash_tvName">FUD SERVICE</string>
    <string name="splash_tvWelcome">Welcome</string>
    <string name="splash_tvWelcomeDetail">It’s a pleasure to meet you. We are excited that you’re here so let’s get started!</string>

    //Add Food Fragment
    <string name="fragment_addFood_tvName">Name</string>
    <string name="fragment_addFood_tvDescription">Description</string>
    <string name="fragment_addFood_btnConfirm">CONFIRM</string>
    <string name="fragment_addFood_btnCategory">Category</string>
    <string name="fragment_addFood_tvPrice">Price</string>

    //Home Fragment
    <string name="fragment_home_tvHome">Welcome To</string>
    <string name="fragment_home_tvHomeSub">Food Delivery</string>


    //Edit Restaurant
    <string name="edit_restaurant">Edit Restaurant</string>
    <string name="register_tv_restaurant_name">Restaurant Name</string>
    <string name="register_btn_list_food">Add Foods</string>
    <string name="register_btn_list_categories">Add Categories</string>
    <string name="register_btn_confirm_update">Confirm Update</string>
    <string name="register_tv_restaurant_category">Restaurant Category</string>

    //Manage Restaurant
    <string name="manage_restaurant">Manage Restaurant</string>
    <string name="tv_rating_restaurant">Rating</string>
    <string name="tv_category">Category</string>

    //Search Food
    <string name="search">Search</string>
    <string name="tv_search_hint">Search here</string>
    <string name="tv_cancel">Cancel</string>
    <string name="tv_recent_searches">RECENT SEARCHES</string>
    <string name="tv_clear_all">CLEAR ALL</string>
    <string name="tv_food">Food</string>

    //Search Result
    <string name="search_result">Search Result</string>
    <string name="rate">4.2</string>
    //Acc Settings
    <string name="acc_settings">Account Settings</string>
    <string name="body_settings">Update your settings like notifications, payments, profile edit etc</string>
    <string name="tv_inf">Profile Information</string>
    <string name="tv_body_inf">Change your account information</string>
    <string name="tv_change_pw">Change Password</string>
    <string name="tv_body_change_pw">Change your password</string>
    <string name="tv_manage">Manage restaurants</string>
    <string name="tv_body_manage">Manage your Restaurants</string>
    <string name="tv_logout">Logout</string>

    //Profile Settings
    <string name="profile_settings">Profile Settings</string>
    <string name="tv_full_name">FULL NAME</string>
    <string name="tv_email_add">EMAIL ADDRESS</string>
    <string name="tv_pw">PASSWORD</string>
    <string name="tv_change">Change</string>
    <string name="tv_change_settings">CHANGE SETTINGS</string>

    //Change Password
    <string name="tv_change_password">CHANGE PASSWORD</string>
    <string name="tv_new_pw">NEW PASSWORD</string>
    <string name="tv_cf_pw">CONFIRM PASSWORD</string>

    //Order
    <string name="tv_your_order">Your Order\'s</string>
    <string name="tv_upcoming">UPCOMING ORDERS</string>
    <string name="tv_clear">CLEAR ALL</string>
    <string name="tv_description">Shortbread, chocolate turtle cookies, and red velvet.</string>
    <string name="tv_food_name">Food name</string>


</resources>