<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.search.SearchFragment">

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/utm_avo_bold"
        android:text="@string/search"
        android:textColor="@color/main_text_color"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtSearchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_back_ground_search"
        android:hint="@string/tv_search_hint"
        android:paddingStart="50dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tvSearch" />

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_search_gray"
        app:layout_constraintBottom_toBottomOf="@id/edtSearchBox"
        app:layout_constraintStart_toStartOf="@id/edtSearchBox"
        app:layout_constraintTop_toTopOf="@id/edtSearchBox" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/edtSearchBox"
        tools:listitem="@layout/item_search" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:src="@drawable/ic_search_gray"
        android:text="@string/tv_cancel"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/edtSearchBox"
        app:layout_constraintEnd_toEndOf="@id/edtSearchBox"
        app:layout_constraintTop_toTopOf="@id/edtSearchBox"

        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvClearAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:src="@drawable/ic_search_gray"
            android:text="@string/tv_clear_all"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_search_gray"
            android:text="@string/tv_recent_searches"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tvClearAll"
            tools:listitem="@layout/item_history" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>